5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1637_2711.log
== TEST (2019-04-09 11:23:40) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = input( 1,20)
d = int(input("Quantidade de passe:"))
e = input(1,50)
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

	print(mgs)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = input( 1,20)
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:25:24) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets 1,20")
d = int(input("Quantidade de passe:"))
e = float(input("Valor do passe 1,50"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

	print(mgs)
-- EXECUTION TIME:
0.142867
-- ERROR:
  File "/home/codebench/codes/1637/2711/main.py", line 5
    d = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:27) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets 1,20")
d = int(input("Quantidade de passe:"))
e = float(input("Valor do passe 1,50"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

	print(mgs)
-- ERROR:
File "XXXX", line 5
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:59) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets 1,20")
d = int(input("Quantidade de passes de oninus:"))
e = float(input("Valor do passe 1,50"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

	print(mgs)
-- ERROR:
File "XXXX", line 5
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:26:06) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets 1,20")
d = int(input("Quantidade de passes de onibus:"))
e = float(input("Valor do passe 1,50"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

	print(mgs)
-- ERROR:
File "XXXX", line 5
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:26:57) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets 1,20")
d = int(input("Quantidade de passes de onibus: "))
e = float(input("Valor do passe 1,50"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

	print(mgs)
-- ERROR:
File "XXXX", line 5
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:27:13) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets 1,20")
d = int(input("Quantidade de passes no onibus: "))
e = float(input("Valor do passe 1,50"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

	print(mgs)
-- ERROR:
File "XXXX", line 5
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:27:40) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets:")
d = int(input("Quantidade de passes no onibus: "))
e = float(input("Valor do passe:"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

print(mgs)
-- ERROR:
File "XXXX", line 5
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:29:10) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets:"))
d = int(input("Quantidade de passes no onibus: "))
e = float(input("Valor do passe:"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

print(mgs)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:29:49) 
-- CODE:
a = float(input("Valor disponivel:"))
b = int(input("Quantos tickets do RU:"))

c = float(input("Valor do tckets:"))
d = int(input("Quantidade de passes no onibus: "))
e = float(input("Valor do passe:"))
eq = (b*c) +  (d*e)
if(a>=eq):
	mgs = "suficiente".upper()
else:
	mgs = "insuficiente".upper()

print(mgs)
-- EXECUTION TIME:
0.143008
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
